versioned_docs/version-0.3.0/05-developer-tools/01-CLI/02-meroctl.mdx
---
id: meroctl
title: Meroctl
---

import MeroctlInstallation from '../../shared/install-meroctl.mdx';

Meroctl is a command-line tool that enables you to interact with your Calimero
node directly from the shell.

<details>
  <summary>Installation</summary>
  <p>
    <MeroctlInstallation />
  </p>
</details>

## Usage

```bash title="Terminal"
meroctl [OPTIONS] --node-name <NAME> <COMMAND>
```

### Commands:

- `app` Command for managing applications
- `context` Command for managing contexts
- `identity` Command for managing applications
- `proxy` Command for managing proxy contract
- `call` Executing read and write RPC calls
- `peers` Show a number of connected peers
- `bootstrap` Setup two nodes inside the same context
- `help` Print this message or the help of the given subcommand(s)

:::tip

Run help to get more information about the available options and commands.

```bash title="Terminal"
meroctl --help
```

:::

### Options:

- `--home <PATH>` Directory for config and data
- `-n`, `--node-name <NAME>` Name of node
- `-h`, `--help` Print help
- `-output-format <FORMAT>` [default: plain-text] [possible values:
  json, plain-text]
- `-V`, `--version` Print version

:::tip

Default location of the config and data directory is `~/.calimero`. You can
change the location by using the `--home` option.

:::

:::note

All of the communication with your node through the meroctl CLI is protected by
your nodes private key.

:::

### Examples:

| **Command**                                                                       | **Description**                     |
| --------------------------------------------------------------------------------- | ----------------------------------- |
| `meroctl --node-name <NAME> app <COMMAND>`                                        | Command for managing applications   |
| `meroctl --node-name <NAME> context <COMMAND>`                                    | Command for managing contexts       |
| `meroctl --node-name <NAME> identity <COMMAND>`                                   | Command for managing identities     |
| `meroctl --node-name <NAME> proxy <COMMAND>`                                      | Command for managing proxy contract |
| `meroctl --node-name <NAME> call [OPTIONS] --as <EXECUTOR> <CONTEXT_ID> <METHOD>` | Executing read and write RPC calls  |

### Manage Applications

```bash title="Terminal"
meroctl --node-name <NAME> app <COMMAND>
```

Commands:

- `get` Fetch application details
- `install` Install an application
- `list` List installed applications

### Manage Contexts

```bash title="Terminal"
meroctl --node-name <NAME> context <COMMAND>
```

Commands:

- `list` List all contexts
- `create` Create a new context
- `join` Join an application context
- `invite` Create invitation to a context for a invitee
- `get` Fetch details about the context
  <!-- prettier-ignore -->
  <details>
  <summary>`get` subcommands</summary>

      - `info` Get context information
      - `client-keys` Get client keys
      - `storage` Get storage information
      - `identities (-owned)` Get all identities in the context. Use `--owned` to get
        only owned identities

              ```bash Terminal
              meroctl --node-name <NAME> context get <contextId> <SUBCOMMAND>
              ```

      </details>

- `delete` Delete an context
- `watch` Watch events from a context
- `update` Update app in context
- `peers` Show a number of connected peers

### Manage Identities

```bash title="Terminal"
meroctl --node-name <NAME> identity <COMMAND>
```

Commands:

- `generate` Generate public/private key pair used for context identity

### Command for managing proxy contract

```bash title="Terminal"
 meroctl --node-name <NAME> proxy <COMMAND>
```

Commands:

- `get` Fetch details about the proxy contract

### Show a number of connected peers

```bash title="Terminal"
meroctl --node-name <NAME> peers
```

### Executing read and write RPC calls

```bash title="Terminal"
meroctl --node-name <NAME> call [OPTIONS] --as <EXECUTOR> <CONTEXT_ID> <METHOD>
```

Arguments:

- `<CONTEXT_ID>` ContextId of the context
- `<METHOD>` Method to fetch details

Options:

- `--args <ARGS>` JSON arguments to pass to the method
- `--as <EXECUTOR>` Public key of the executor
- `--id <ID>` Id of the RPC execute call [default: dontcare]

### Setup two nodes inside the same context

```bash title="Terminal"
meroctl --node-name <NAME> bootstrap <COMMAND> --merod-path <MEROD_PATH> --protocol <PROTOCOL> --app-path [APP_PATH]
```

Command initializes and run `node1` and `node2` in the same context.

Arguments:

- `<MEROD_PATH>` Full path to
  [merod](https://calimero-network.github.io/developer-tools/CLI/merod) binary.
- `<PROTOCOL>` One of supported protocols for context creation. (e.g. near,
  starknet, icp)
- `<APP_PATH>` Path to the app wasm file. If not specified, the default
  [core-template-app](https://github.com/calimero-network/core-app-template)
  will be used

Commands:

- `start`: Start bootstrap process
